fixed a render bug where username not showing on profile and updated user model

--- a/src/Stats-Anime/user_profileStyle.css
+++ b/src/Stats-Anime/user_profileStyle.css
@@ -68,6 +68,7 @@
     border: 3px solid #8A9DFF;
     border-radius: 0.5em;
     color: white;
+
     
 }
 .side-profile .edit.save{
@@ -130,19 +131,20 @@
     width: 11.6em;
     
     text-align: center;
-    background: transparent;
+  
+    background: #0a79ba41;
 }
 .username-nonedit{
-  
     height: auto;
+    background: transparent;
 }
 .status{
   
     /* height: 1.4em; */
-    padding: 1.04em 1.5em;
+    padding: 0.8em 1.5em;
     outline: none;
     border: none;
-    font-size: 0.93em;
+    font-size: 0.9em;
     border-radius: 0.23em;
     /* transform: translateY(-0.7em); */
     display: inline-block;
@@ -151,7 +153,12 @@
     /* opacity: 13%; */
     color: white;
     text-align: center;
+    font-family: sans-serif;
+    font-weight: lighter;
 
+}
+.status-edit{
+    text-align: left;
 }
 
 
